@@ -28,7 +28,6 @@ import org.jspecify.annotations.NullMarked;
 import org.jspecify.annotations.Nullable;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Set;
 
 import static org.bukkit.event.player.PlayerTeleportEvent.TeleportCause.COMMAND;
@@ -94,13 +93,10 @@ final class WorldCreateCommand extends OptionCommand {
 
     private @Nullable Level buildLevel(CommandContext<CommandSourceStack> context, CommandSender sender) {
         var name = context.getArgument("name", String.class);
-
-        if (Paths.get(name).getNameCount() != 1) {
+        if (Path.of(name).getNameCount() != 1) {
             plugin.bundle().sendMessage(sender, "world.subfolders.create");
             return null;
-        }
-
-        try {
+        } else try {
             return plugin.levelBuilder(plugin.levelView().findFreePath(name))
                     .levelStem(tryGetArgument(context, "dimension", LevelStem.class).orElse(null))
                     .generator(tryGetArgument(context, "generator", Generator.class).orElse(null))
